<resources>
    <string name="app_name">DaysOff</string>
    <string name="title_activity_calendar_detail">CalendarDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_event_detail">Event Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Event List -->
    <string name="event_list_no_events">Kitty Sad. No events today. Schedule One?</string>
    <string name="event_list_time_placeholder">9:00am - 10:00am</string>
    <string name="event_list_description_placeholder">Going For A Walks, Have a Meal</string>

    <!-- Event Detail Screen -->
    <string name="when">When:</string>
    <string name="what">What:</string>
    <string name="who">Who:</string>
    <string name="action_share">Share</string>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>

    <!-- Add/Edit Event -->
    <string name="event_title">Title</string>
    <string name="event_form_summary">Name</string>
    <string name="event_form_time">Time</string>
    <string name="event_form_start_time">Start:</string>
    <string name="event_form_end_time">End:</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="add_event_save_btn">Save</string>
    <string name="event_form_activity_title">Activity</string>
    <string name="event_form_checkbox_food">Grab some food</string>
    <string name="event_form_checkbox_movie">Watch a Movie</string>
    <string name="event_form_checkbox_outdoors">Go Fly Like a Bird</string>
    <string name="event_form_location_title">Location</string>
    <string name="event_form_location_hint">Enter location</string>

    <!-- Calendar Grid -->
    <string name="calendar_no_events">No events for this Calendar.</string>
    <string name="calendar_positive_button">Okay</string>

    <!-- Single Event Detail -->
    <string name="single_event_date">Date</string>
    <string name="single_event_time">Time</string>
    <string name="single_event_desc">Description</string>
    <string name="single_event_location">Location</string>

    <!-- Errors -->
    <string name="event_form_error_summary">You must add a summary to proceed.</string>
    <string name="event_form_error_checkboxes">Pick at least 1 activity.</string>
    <string name="add_event_network_error_title">Error Title</string>
    <string name="add_event_network_error_message">Add error message here.</string>
    <string name="events_activity_no_date_set">No Date Set</string>
    <string name="events_activity_no_date_set_message">The date value has not been set. Return to the calendar screen and pick a date.</string>

    <!-- Widget -->
    <string name="default_widget_text">Setup App to Use Widget</string>
    <string name="default_widget_button">Setup</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">DaysOff Calendars</string>

    <!-- Accessibility Content -->
    <string name="button_placeholder">Button</string>
    <string name="event_list_title_content_desc">Name of Event</string>
    <string name="event_list_time_content_desc">Time of Event</string>
    <string name="event_list_desc_content_desc">Description of Event</string>
    <string name="event_list_row_next">Navigation Icon that denotes Next.</string>
    <string name="calendar_list_row">Name of Calendar</string>
    <string name="single_event_date_label">Date of Event</string>
    <string name="single_event_time_label">Time of Event</string>
    <string name="single_event_location_label">Location of Event</string>
    <string name="single_event_desc_label">Description of Event</string>
    <string name="add_event_icon_clock">Icon of a Clock to denote date and time selection</string>
    <string name="add_event_location">Text field to input Location of event</string>

    <!-- Database related -->
    <string name="content_authority">amhamogus.com.daysoff.app</string>
</resources>

