<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_row_frame"
    android:layout_width="match_parent"
    android:layout_height="@dimen/event_row_height"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingEnd="@dimen/event_row_padding_left"
    android:paddingLeft="@dimen/event_row_padding_left"
    android:paddingRight="@dimen/event_row_padding_left"
    android:paddingStart="@dimen/event_row_padding_left">

    <TextView
        android:id="@+id/event_list_time"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/event_list_time_content_desc"
        android:paddingEnd="@dimen/event_row_padding_left"
        android:paddingStart="@dimen/event_row_padding_left"
        android:text="@string/event_list_time_placeholder"
        android:textColor="?android:attr/colorAccent"
        android:textSize="12sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/next_event_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/event_list_row_next"
        android:src="@drawable/ic_navigate_next_black_24dp" />

    <TextView
        android:id="@+id/event_title"
        style="@style/ListItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_list_time"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/event_list_title_content_desc"
        android:text="@string/event_title"
        android:textSize="24sp" />

</RelativeLayout>
