<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amhamogus.com.daysoff.fragments.SingleEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_event_date"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/single_event_date_field"
            android:text="@string/single_event_date"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="#333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_event_time"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/single_event_time_field"
            android:text="@string/single_event_time"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="#333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_event_desc"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/single_event_desc_field"
            android:text="@string/single_event_desc"
            android:textSize="24sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="#333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_event_location"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/single_event_location_field"
            android:layout_height="50dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/single_event_location"
            android:textSize="24sp" />
    </LinearLayout>

</FrameLayout>
